cncProd/force-app/main/default/objects/Walk_In__c/Walk_In__c.object-meta.xml
<CustomObject>
    <description>To capture the details of visitor cames in a day</description>
    <label>Walk In</label>
    <nameField>
        <label>Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Walk In</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>