cncProd/force-app/main/default/objects/Walk_In__c/fields/QueueID__c.field-meta.xml
<CustomField>
    <fullName>QueueID__c</fullName>
    <label>Queue ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>