cncProd/force-app/main/default/objects/Walk_In__c/fields/ServedAt__c.field-meta.xml
<CustomField>
    <fullName>ServedAt__c</fullName>
    <label>Served At</label>
    <type>DateTime</type>
</CustomField>